--- a/src/main/resources/db/changelog/v1.0/changelog-v1.0-cumulative.yaml
+++ b/src/main/resources/db/changelog/v1.0/changelog-v1.0-cumulative.yaml
@@ -1,3 +1,3 @@
 databaseChangeLog:
   - include:
-      file: db/changelog/v1.0/202201311147_init.yaml
+      file: db/changelog/v1.0/202201311147_create_init_tables.yaml
